# libsql-experimental-python

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs  example.py  libsql_experimental.pyi  perf-libsql.py  pyproject.toml  shell.nix
.github/workflows/: CI.yml  build-windows-wheel.yml  pr-tests.yml
docs/: api.md
examples/: execute_script.py  remote_connect.py  statements.sql  sync_write.py  vector.py
examples/batch/: README.md  main.py
examples/encryption/: README.md  main.py
examples/local/: README.md  main.py
examples/memory/: README.md  main.py
examples/remote/: README.md  main.py
examples/sqlalchemy/: dialect.py  example.py
examples/sync/: .gitignore  README.md  main.py
examples/transaction/: .gitignore  README.md  main.py
examples/vector/: README.md  main.py
src/: lib.rs
tests/: test_basic.py  test_suite.py
