[package]
name = "libsql-python"
version = "0.0.43"
edition = "2021"

[lib]
name = "libsql_experimental"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
libsql = { version = "0.9.1", features = ["encryption"]  }
tokio = { version = "1.29.1", features = [ "rt-multi-thread" ] }
tracing-subscriber = "0.3"

[build-dependencies]
version_check = "0.9.5"
# used where logic has to be version/distribution specific, e.g. pypy
pyo3-build-config = { version = "0.19.0" }
