[package]
name = "pylibsql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
libsql = { version = "0.9.10", features = ["encryption"]  }
tokio = { version = "1.29.1", features = [ "rt-multi-thread" ] }
tracing-subscriber = "0.3"

[build-dependencies]
version_check = "0.9.5"
# used where logic has to be version/distribution specific, e.g. pypy
pyo3-build-config = { version = "0.19.0" }
